js/time-tracker-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root, factory) {
  if (typeof define === "function" && define.amd) {
    define([], factory);
  } else if (typeof module === "object" && module.exports) {
    module.exports = factory();
  } else {
    root.TimeTrackerParser = factory();
  }
})(this, function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Main: peg$parseMain },
        peg$startRuleFunction  = peg$parseMain,

        peg$c0 = peg$anyExpectation(),
        peg$c1 = function(result, display) {
            return display.map(formatter => formatter(result)).join('; ')
          },
        peg$c2 = function(opts) {
            return opts ?? [result => format(result)]
          },
        peg$c3 = "%%",
        peg$c4 = peg$literalExpectation("%%", false),
        peg$c5 = function(opts) {
            return opts
          },
        peg$c6 = function(x) {
            return [x]
          },
        peg$c7 = ";",
        peg$c8 = peg$literalExpectation(";", false),
        peg$c9 = function(id) {
            return () => id in vars ? `${id} = ${format(vars[id])}` : `${id} missing`
          },
        peg$c10 = "#",
        peg$c11 = peg$literalExpectation("#", false),
        peg$c12 = function() {
            return () => Object.keys(vars).map(k => {
              return `${k} = ${format(vars[k])}`
            }).join('; ')
          },
        peg$c13 = "$",
        peg$c14 = peg$literalExpectation("$", false),
        peg$c15 = function() {
            return result => format(result)
          },
        peg$c16 = "\"",
        peg$c17 = peg$literalExpectation("\"", false),
        peg$c18 = function(els) {
            return result => els.map(f => f(result)).join('')
          },
        peg$c19 = function(id) {
            return () => id in vars ? `${format(vars[id])}` : `$${id};`
          },
        peg$c20 = function() {
            return () => '$'
          },
        peg$c21 = "$@",
        peg$c22 = peg$literalExpectation("$@", false),
        peg$c23 = function(cs) {
            const value = cs.join('')
            return () => value
          },
        peg$c24 = /^[$"]/,
        peg$c25 = peg$classExpectation(["$", "\""], false, false),
        peg$c26 = function(c) { return c },
        peg$c27 = "\"\"",
        peg$c28 = peg$literalExpectation("\"\"", false),
        peg$c29 = function() { return '"' },
        peg$c30 = function(e0, eRest) {
            return [e0, ...eRest].last
          },
        peg$c31 = "\n",
        peg$c32 = peg$literalExpectation("\n", false),
        peg$c33 = /^[ \n\t]/,
        peg$c34 = peg$classExpectation([" ", "\n", "\t"], false, false),
        peg$c35 = "=",
        peg$c36 = peg$literalExpectation("=", false),
        peg$c37 = function(ex, x) { return x },
        peg$c38 = function(ex, lhs) {
            let result = ex
            if (lhs) {
              if (isVar(lhs)) {
                let temp = lhs
                lhs = ex
                ex = temp
              }
              if (!isVar(ex) || isVar(lhs)) {
                throw new Error("Invalid format")
              }
              const [[id, ops], __] = ex
              result = ops.reduce((val, op) => op(val), lhs)
              vars[id] = result
            }
            if (isVar(result)) {
              throw new Error("result is variable")
            }
            return result
          },
        peg$c39 = "+",
        peg$c40 = peg$literalExpectation("+", false),
        peg$c41 = "-",
        peg$c42 = peg$literalExpectation("-", false),
        peg$c43 = function(head, op, term) { return { term, op } },
        peg$c44 = function(head, tail) {
              return tail.reduce(function(result, element) {
                if (element.op === "+") { return add(result, element.term); }
                if (element.op === "-") { return sub(result, element.term); }
              }, head);
            },
        peg$c45 = "*",
        peg$c46 = peg$literalExpectation("*", false),
        peg$c47 = "/",
        peg$c48 = peg$literalExpectation("/", false),
        peg$c49 = function(head, tail) {
              return tail.reduce(function(result, element) {
                if (element.op === "*") { return mul(result, element.term); }
                if (element.op === "/") { return div(result, element.term); }
              }, head);
            },
        peg$c50 = "(",
        peg$c51 = peg$literalExpectation("(", false),
        peg$c52 = ")",
        peg$c53 = peg$literalExpectation(")", false),
        peg$c54 = function(expr) { return expr; },
        peg$c55 = function(expr) { return pos(expr) },
        peg$c56 = function(expr) { return neg(expr) },
        peg$c57 = function(value, duration) {
            if (duration) {
              return [duration(value), DURATION]
            }
            return value
          },
        peg$c58 = function(id) {
            if (id in vars) {
              return vars[id]
            }
            return [[id, []], VARIABLE] 
          },
        peg$c59 = function(minutesObj) {
            return x => {
              let base = x * 60
              if (minutesObj) {
                const [minutes] = minutesObj
                return base + minutes
              }
              return base
            }
          },
        peg$c60 = function() {
            return x => x
          },
        peg$c61 = "hr",
        peg$c62 = peg$literalExpectation("hr", false),
        peg$c63 = "s",
        peg$c64 = peg$literalExpectation("s", false),
        peg$c65 = function() { return 'hr' },
        peg$c66 = "min",
        peg$c67 = peg$literalExpectation("min", false),
        peg$c68 = function() { return 'min' },
        peg$c69 = ":",
        peg$c70 = peg$literalExpectation(":", false),
        peg$c71 = function(hrs, mins, opts) {
           return [((opts.isAm && hrs == 12 ? 0 : hrs) + (opts.isPm && hrs != 12 ? 12: 0)) * 60 + mins, opts.isDuration ? DURATION : TIME];
         },
        peg$c72 = function(x) {
            return x ?? {}
          },
        peg$c73 = "D",
        peg$c74 = peg$literalExpectation("D", false),
        peg$c75 = function() { return { isDuration: true } },
        peg$c76 = "A",
        peg$c77 = peg$literalExpectation("A", false),
        peg$c78 = "M",
        peg$c79 = peg$literalExpectation("M", false),
        peg$c80 = function() { return { isAm: true } },
        peg$c81 = "P",
        peg$c82 = peg$literalExpectation("P", false),
        peg$c83 = function() { return { isPm: true } },
        peg$c84 = peg$otherExpectation("Number"),
        peg$c85 = /^[a-zA-Z_]/,
        peg$c86 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
        peg$c87 = /^[a-zA-Z0-9_]/,
        peg$c88 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
        peg$c89 = function() {
            return text()
          },
        peg$c90 = /^[0-9]/,
        peg$c91 = peg$classExpectation([["0", "9"]], false, false),
        peg$c92 = ".",
        peg$c93 = peg$literalExpectation(".", false),
        peg$c94 = function() { return parseFloat(text()) },
        peg$c95 = function() { return parseInt(text()) },
        peg$c96 = peg$otherExpectation("whitespace"),
        peg$c97 = /^[ \t]/,
        peg$c98 = peg$classExpectation([" ", "\t"], false, false),
        peg$c99 = "//",
        peg$c100 = peg$literalExpectation("//", false),
        peg$c101 = /^[^\n]/,
        peg$c102 = peg$classExpectation(["\n"], true, false),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseMain() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseEquationList();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseDisplayOpts();
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s6 = peg$currPos;
                peg$silentFails++;
                if (input.length > peg$currPos) {
                  s7 = input.charAt(peg$currPos);
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c0); }
                }
                peg$silentFails--;
                if (s7 === peg$FAILED) {
                  s6 = void 0;
                } else {
                  peg$currPos = s6;
                  s6 = peg$FAILED;
                }
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c1(s2, s4);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseDisplayOpts() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseDisplayOpts_0();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseDisplayOpts_0() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c3) {
        s1 = peg$c3;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseDisplayOpts_1();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseDisplayOpts_1() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseDisplayOpt();
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          s1 = peg$parseDisplayOpt();
        }
      } else {
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseDisplayString();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c6(s1);
        }
        s0 = s1;
      }

      return s0;
    }

    function peg$parseDisplayOpt() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseID();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 59) {
          s2 = peg$c7;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c9(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 35) {
          s1 = peg$c10;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c12();
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 36) {
            s1 = peg$c13;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c14); }
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c15();
          }
          s0 = s1;
        }
      }

      return s0;
    }

    function peg$parseDisplayString() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 34) {
        s1 = peg$c16;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c17); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseDisplayStringElement();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseDisplayStringElement();
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 34) {
            s3 = peg$c16;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c17); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c18(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseDisplayStringElement() {
      var s0, s1, s2, s3;
